# ur5e_with_robotiq_85

./: README.md
.ur5e_tutorials/scripts/: pick_and_place.py
camera_sensing/yolov5/content/yolov5/data/: custom_data.yaml
motion_planning/: CMakeLists.txt  package.xml
motion_planning/launch/: move_group_python_interface_tutorial.launch  stack_up.launch
motion_planning/scripts/: move_group_python_interface_tutorial.py  moving_bowl.py  robotControl.py  spawn_object.py  stack_up.py  stack_up_with_camera.py
picknplace/: CMakeLists.txt  package.xml
picknplace/scripts/: picknplace.py  robotControl.py
robots/robotiq/robotiq_description/rviz/: view_gripper.rviz
robots/robotiq/robotiq_gripper_controller/: CMakeLists.txt  package.xml
robots/robotiq/robotiq_gripper_controller/launch/: robotiq_gripper.launch
robots/robotiq/robotiq_gripper_controller/src/: main_node.cpp
robots/robotiq/robotiq_gripper_msgs/: CMakeLists.txt  package.xml
robots/robotiq/robotiq_gripper_msgs/msg/: GripperCommand.msg  GripperStatus.msg
robots/universal_robot/ur_description/urdf/inc/: ur5e_macro.xacro
ur5e_robotiq_bringup/: CMakeLists.txt  package.xml
ur5e_robotiq_bringup/launch/: robotiq_85_gripper.launch  ur5e_bringup.launch  ur_common.launch
ur5e_robotiq_bringup/rules/: 80-robotiq_gripper.rules
ur5e_robotiq_description/: CMakeLists.txt  package.xml
ur5e_robotiq_description/launch/: description.launch  load_ur.launch  load_ur5e.launch  rviz.launch
ur5e_robotiq_description/urdf/: ur5e_robotiq.xacro
ur5e_robotiq_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_robotiq_moveit/config/: fake_controllers.yaml  gazebo_ur5e_robot.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur5e_robot.srdf
ur5e_robotiq_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur5e_robotiq_moveit/scripts/: robotControl.py
ur5e_robotiq_tutorials/: CMakeLists.txt  package.xml
ur5e_robotiq_tutorials/scripts/: move_group_python_interface_tutorial.py
ur_robotiq_bringup/: CMakeLists.txt  package.xml
ur_robotiq_bringup/launch/: ur5e_bringup.launch  ur_common.launch
ur_robotiq_description/: CMakeLists.txt  package.xml
ur_robotiq_description/launch/: description.launch  load_ur.launch  load_ur5e.launch
ur_robotiq_description/rviz/: rviz.rviz
ur_robotiq_description/urdf/gripper/: robotiq_gripper.urdf.xacro
ur_robotiq_description/urdf/ur5e/: ur5e.xacro  ur5e_macro.xacro  ur_macro.xacro
