<?xml version="1.0"?>
<package format="2">
  <name>ur_robotiq_bringup</name>
  <version>0.2.1</version>
  <description>
    The package for UR5e with Robotiq 2F-85 Gripper
  </description>
  <maintainer email="sbyun@roas.co.kr"></maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
</package>
