<?xml version="1.0"?>
<package format="2">
  <name>ur_robotiq_description</name>
  <version>0.2.1</version>
  <description>
    This package includes urdf files of Scout
  </description>
  <maintainer email="sbyun@roas.co.kr"></maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>